--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
+    "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-table": "^8.19.2",
     "canvas": "^2.11.2",
     "class-variance-authority": "^0.7.0",
@@ -73,6 +74,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   }
 }
